fix nav z-index

--- a/theme/style.css
+++ b/theme/style.css
@@ -42,6 +42,7 @@ h3 {
 
 nav ul {
   background-color: #ff4079;
+  z-index: 1000;
   display: flex;
   padding: 0;
   margin: 0;
